# ic_2022_kfilter

./: .gitignore  README.md
Neural-Network-KF/: UKF-layer.py  teste.py
Neural-Network-KF/EKF-layer/: EKF-Layer.py
Neural-Network-KF/EKF-layer/Matlab/: general_H.m
Zurich/: fun_time.out  time.out
Zurich/DadosMatLab/: mlab_bias_gyr.csv  mlab_pos.csv
Zurich/DadosZurich/: euler.csv  euler_tim.csv  imu_tim.csv  mag_tim.csv  rpy_tim.csv
Zurich/common/: plot_output.py
Zurich/parallel/: CMakeLists.txt  CheckResult.c  Makefile  README.md  UnitTest.cpp  bench.c  compare_cvm.csv  graphic.py  main  main.cpp  plot_output.py  testbench-cblas.cpp  testbench-compare.py  testbench-omp.cpp  testbench-oneAPI.cpp  testbench-oneMKL.cpp  testbench-serial.cpp  testbench_CovMatrix.csv  testbench_plot.py  time.out
Zurich/parallel/DadosZurich/: gps_hgt.csv  gps_tim.csv  mag_mag.csv  rpy_rpy.csv
Zurich/parallel/include/: Euler.c  Initialization.c  Initialization.h  Quaternions.c  Quaternions.h  Timer.hpp  Timer_omp.hpp  defines.h  file_reader.c  file_reader.h  kalman_filter.c  kalman_filter.h  libmat.c  libmat.h  structs.h
Zurich/parallel/include/kernels/: mkl_common.h  mkl_kernels.hpp  mkl_omp.hpp  omp_kernels.c  omp_kernels.hpp
Zurich/parallel/output/: mlab_bias_acc.csv  output_bias_acc.csv  output_bias_gyr.csv  output_pos.csv  output_qtn.csv  output_rpy.csv  output_vel.csv
Zurich/parallel/output/UnitTests/: Unit3_F.csv  Unit3_G.csv  Unit3_P.csv  Unit3_Q.csv  unit1_H.csv  unit1_P.csv  unit1_Pp.csv  unit1_R.csv  unit1_dx.csv  unit1_dz.csv  unit2_H1.csv  unit2_H2.csv  unit2_H3.csv  unit2_H4.csv  unit2_H5.csv  unit2_H6.csv  unit2_H7.csv  unit2_R1.csv  unit2_R2.csv  unit2_R3.csv  unit2_R4.csv  unit2_R5.csv  unit2_R6.csv  unit2_R7.csv  unit2_dz1.csv  unit2_dz2.csv  unit2_dz3.csv  unit2_dz4.csv  unit2_dz5.csv  unit2_dz6.csv  unit2_dz7.csv
Zurich/parallel/report/: test-Cov15x15.csv
Zurich/serial/: Makefile  UnitTest.c  graphic.py  main.c
Zurich/serial/DadosZurich/: gps_lon.csv  gps_pos.csv  imu_gyr.csv
Zurich/serial/include/: Euler.c  Initialization.c  Quaternions.c  Timer.h  defines.h  file_reader.h  kalman_filter.c  kalman_filter.h  libmat.c  libmat.h  structs.h
Zurich/sycl_fpga/: CMakeLists.txt  build_run.sh  check_output_result.sh  fun_time.out  run_check.sh  time.out
Zurich/sycl_fpga/DadosZurich/: gps_lat.csv  imu_acc.csv
Zurich/sycl_fpga/KLibrary/: CMakeLists.txt
Zurich/sycl_fpga/KLibrary/include/: Euler.h  Initialization.h  Quaternions.h  Timer.hpp  defines.h  err_handler.h  file_reader.h  kalman_filter.h  libmat.h  structs.h
Zurich/sycl_fpga/KLibrary/kernels/: mkl_common.h  mkl_kernels.hpp  mkl_omp.hpp  omp_kernels.c  omp_kernels.hpp
Zurich/sycl_fpga/KLibrary/src/: Euler.cpp  Quaternions.cpp  err_handler.cpp  file_reader.cpp  kalman_filter.cpp  libmat.cpp
Zurich/sycl_fpga/fpga_kernels/: matmul.hpp  matrix.hpp  memory_transfers.hpp
Zurich/sycl_fpga/kalman_filter/: CMakeLists.txt  KFilter.cpp
Zurich/sycl_fpga/matmul_test/: CMakeLists.txt  matmul_demo.cpp
Zurich/sycl_fpga/output/: euler.csv  mlab_qtn.csv  mlab_rpy.csv  mlab_vel.csv  output_bias_acc.csv  output_bias_gyr.csv  output_pos.csv  output_qtn.csv  output_rpy.csv  output_vel.csv
Zurich/sycl_fpga/test/: CMakeLists.txt  main.cpp
buff_streaming_oneapi/: CMakeLists.txt
buff_streaming_oneapi/src_test/: CMakeLists.txt  common.hpp  streaming_with_api.hpp
fpga_matmul_testing/matmul_sample/: build_run.sh
fpga_matmul_testing/matmul_sample/include/: matmul.hpp  matrix.hpp
fpga_matmul_testing/matmul_sample/src/: matmul_demo.cpp
kalman-filter-4-beginners/14.EKF/: Makefile  RadarEKF.h  RadarEKF_cpu.csv  RadarEKF_gpu.csv  TestRadarEKF.cpp  TestRadarEKF.csv  TestRadarEKF_CPU.csv
kalman-filter-4-beginners/15.UKF/: Makefile  TestRadarUKF
new_implementation/oneapi/: CMakeLists.txt  README.md  main.cpp
new_implementation/oneapi/KalmanFilter/: CMakeLists.txt  KalmanFilter.cpp
new_implementation/oneapi/KalmanFilter/include/: KalmanFilter.hpp  Quaternion.hpp
new_implementation/oneapi/Matrix/: CMakeLists.txt  Matrix.cpp
new_implementation/oneapi/Matrix/include/: Linalg.hpp  Matrix.hpp
new_implementation/oneapi/common/: common_matrix.hpp  system_define.h
new_implementation/oneapi/oneAPIMatrix/: CMakeLists.txt  oneAPIMatrix.cpp
new_implementation/oneapi/oneAPIMatrix/include/: oneAPIMatrix.hpp
